--- a/public/firebase.json
+++ b/public/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "static_website",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
