first day final commit

--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18  # Adjust based on your project needs
+          node-version: 16  # Adjust based on your project needs
 
       - name: Install Dependencies
-        run: npm install  # Adjust if using yarn or pnpm
+        run: npm ci --loglevel verbose# Adjust if using yarn or pnpm
 
       - name: Run Build Script
         run: npm run build  # Ensure this script exists in package.json
